<resources>
    <string name="app_name">IHC</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_message">Messages</string>
    <string name="title_activity_match">Match</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="send">Send Message</string>
    <string name="edit">Edit</string>
    <string name="name">MARIO</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello this will be Match Page</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_profile2">Profile2</string>
    <string name="spin">SPIN</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here</string>
    <string name="todo">TODO</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="logo_string">Logo</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="login_ek3_string">LOGIN</string>
    <string name="login_ek4_string">LOGIN</string>
    <string name="title_matches">Matches</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here</string>
    <string name="spin_the_wheel">Spin the wheel!</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="user_name">Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="age">Age</string>
    <string name="bio">Bio</string>
    <string name="cancel">Cancel</string>
    <string name="city_country">City, Country</string>
    <string name="phone_number">Phone Number</string>
</resources>