<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".EditProfile">

        <RelativeLayout
            android:id="@+id/constraint_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="false"
                android:contentDescription="@string/edit"
                android:focusableInTouchMode="true"
                android:scaleType="fitXY"
                android:src="@drawable/austin_wade_x6uj51n5ce8_unsplash" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                android:text="Select Photo"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:fontFamily="@font/inter_bold"
                android:alpha="0.7" />
        </RelativeLayout>

        <EditText
            android:id="@+id/bio"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/constraint_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:alpha="0.7"
            android:autoSizeTextType="uniform"
            android:autofillHints="Hi my name is Slim Shady"
            android:background="@drawable/rectangle_1_shape"
            android:fontFamily="@font/inter"
            android:hint="@string/bio"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/age"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:alpha="0.7"
            android:autoSizeTextType="uniform"
            android:autofillHints="21"
            android:background="@drawable/rectangle_1_shape"
            android:fontFamily="@font/inter"
            android:hint="@string/age"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/country"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:alpha="0.7"
            android:autoSizeTextType="uniform"
            android:autofillHints="Lisbon, Portugal"
            android:background="@drawable/rectangle_1_shape"
            android:fontFamily="@font/inter"
            android:hint="@string/city_country"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/update_profile_btn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/inter_bold"
            android:minHeight="60dp"
            android:text="@string/update_profile"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_profile_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_profile_btn"
            app:strokeColor="@color/teal_700"
            app:strokeWidth="3dp" />
    </RelativeLayout>
</ScrollView>